# PackSwitcher

./: .editorconfig  .prettierignore  .prettierrc  CONTRIBUTING.md  LICENSE.md  README.md  UPDATER_SETUP.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  pr.yml  release.yml
scripts/: README.md  sync-version.js
src/: App.css  App.tsx  UpdateChecker.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: command.rs  fns.rs  main.rs  tray.rs
