[package]
name = "packswitcher"
version = "1.1.7"
description = "A macOS menubar app that automatically translates package manager commands"
authors = ["you@example.com"]
license = "MIT"
repository = "https://github.com/yourusername/packswitcher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-updater = "2.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
clipboard-rs = "0.2.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
